--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body {
 .resourceRow, #antSection {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 6px;
   margin: 4px 0;
 }
 
@@ -202,9 +202,10 @@ body {
 }
 
 /* Amount and net gain */
-.amount .netGain{
+.amount{
+  width: 40px;
   white-space: nowrap;
-  font-size: 1rem;
+  font-size: 0.85rem;
   text-align: center;
   line-height: 1;
   min-width: 40px;
@@ -229,6 +230,7 @@ progress {
   overflow: hidden;
   background-color: #222;
   border: 1px solid #444;
+  min-width: 60px;
 }
 
 /* Base empty bar */
